# whatsapp-translator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs
src/: cli.rs  link_preview.rs  main.rs  mcp.rs  oauth.rs  storage.rs  style_analyzer.rs  translation.rs  web.rs
src/bridge/: mod.rs  process.rs  protocol.rs
src/display/: message.rs  mod.rs  qr.rs
wa-bridge/: client.go  go.mod  go.sum  main.go  protocol.go
web/: package-lock.json  package.json
web/public/: app.js  index.html  styles.css
web/src/: bridge.js  server.js  store.js
